--- a/index.html
+++ b/index.html
@@ -13,12 +13,13 @@
   <link rel="stylesheet" href="css/styles.css">
 
   <link rel="shortcut icon" type="image/x-icon" href="http://kskpage.com/favicon1.ico">
+  <link href="https://fonts.googleapis.com/css2?family=M+PLUS+1p:wght@300&display=swap" rel="stylesheet">
 
 </head>
 
 <body>
   <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
-    <a class="navbar-brand" href="#">Navbar</a>
+    <a class="navbar-brand" href="#">MUVRA</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -44,8 +45,7 @@
         </li>
       </ul>
       <form class="form-inline my-2 my-lg-0">
-        <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
-        <button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
+
       </form>
     </div>
   </nav>
@@ -53,7 +53,7 @@
   <div role="main" class="container">
 
     <div class="starter-template">
-      <h1>Bootstrap starter template</h1>
+      <h1>MVURA</h1>
       <p class="lead">Use this document as a way to quickly start any new project.<br> All you get is this text and a mostly barebones HTML document.</p>
     </div>
 
