--- a/index.html
+++ b/index.html
@@ -30,36 +30,51 @@
           <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Link</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+          <a class="nav-link" href="#new">What's New</a>
         </li>
         <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Dropdown</a>
+          <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">More</a>
           <div class="dropdown-menu" aria-labelledby="dropdown01">
-            <a class="dropdown-item" href="#">Action</a>
-            <a class="dropdown-item" href="#">Another action</a>
-            <a class="dropdown-item" href="#">Something else here</a>
+            <a class="dropdown-item" href="#about">Our Water</a>
+            <a class="dropdown-item" href="#sustain">Sustainability</a>
+            <a class="dropdown-item" href="#buy">Where To Buy</a>
           </div>
         </li>
       </ul>
       <form class="form-inline my-2 my-lg-0">
-
+        <button class="btn btn-secondary my-2 my-sm-0" type="submit">Sign Up</button><p>&emsp;</p><button class="btn btn-secondary my-2 my-sm-0" type="submit">Log In</button>
       </form>
     </div>
   </nav>
 
-  <div role="main" class="container">
+      <img src="images/header1_.jpg" alt="header">
+      <img src="images/sparkling2.jpg" id="new" alt="instagram gallery">
 
-    <div class="starter-template">
-      <h1>MVURA</h1>
-      <p class="lead">Use this document as a way to quickly start any new project.<br> All you get is this text and a mostly barebones HTML document.</p>
+
+      <div role="main" class="container">
+        <img src="images/gallery_.jpg" id="about" alt="instagram gallery">
+        <p class="hashtag">#MUVRA</p>
+        <img src="images/ourwater.jpg" alt="certified quality" class="shadow">
+        <p>&emsp;<p/>
+
+          <div class="row">
+    <div class="col-md-6 shadow">
+      <img src="images/nature.jpg" alt="water source">
     </div>
+<div class="col-md-6 shadow">
+            <img src="images/recycle_.jpg" alt="return bottle">
+        </div>
+      </div>
 
-  </div>
+        <div class="starter-template">
+          <h1>MVURA</h1>
+          <p class="lead">Use this document as a way to quickly start any new project.<br> All you get is this text and a mostly barebones HTML document.</p>
+          <p>&emsp;<p/>
+          </div>
 
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+        </div>
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="js/bootstrap.min.js"></script>
   <script src="js/scripts.js"></script>
 </body>
