--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
 
-  <title>Beverage Co.,ltd</title>
+  <title>MUVRA - Mineral Water</title>
 
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -14,7 +14,6 @@
 
   <link rel="shortcut icon" type="image/x-icon" href="http://kskpage.com/favicon1.ico">
   <link href="https://fonts.googleapis.com/css2?family=M+PLUS+1p:wght@300&display=swap" rel="stylesheet">
-
 </head>
 
 <body>
@@ -30,14 +29,14 @@
           <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#new">What's New</a>
+          <a class="nav-link" href="#about">Our Water</a>
         </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">More</a>
           <div class="dropdown-menu" aria-labelledby="dropdown01">
-            <a class="dropdown-item" href="#about">Our Water</a>
             <a class="dropdown-item" href="#sustain">Sustainability</a>
-            <a class="dropdown-item" href="#buy">Where To Buy</a>
+            <a class="dropdown-item" href="#new">What's New</a>
+            <a class="dropdown-item" href="#buy">Order Now</a>
           </div>
         </li>
       </ul>
@@ -47,36 +46,182 @@
     </div>
   </nav>
 
-      <img src="images/header1_.jpg" alt="header">
-      <img src="images/sparkling2.jpg" id="new" alt="instagram gallery">
 
-
-      <div role="main" class="container">
-        <img src="images/gallery_.jpg" id="about" alt="instagram gallery">
-        <p class="hashtag">#MUVRA</p>
-        <img src="images/ourwater.jpg" alt="certified quality" class="shadow">
-        <p>&emsp;<p/>
-
-          <div class="row">
-    <div class="col-md-6 shadow">
-      <img src="images/nature.jpg" alt="water source">
+  <div class="thumbnail">
+    <img src="images/bev_head.jpg" alt="instagram gallery">
+    <div class="caption">
+      <h2 class="ml12">Hydration never tasted so good</h2>
+      <h2 class="ml13">Stay refreshed & hydrated with MUVRA</h2>
     </div>
-<div class="col-md-6 shadow">
-            <img src="images/recycle_.jpg" alt="return bottle">
+  </div>
+
+
+<div class="starter-template">
+  <h1>MUVRA</h1>
+  <p class="lead">Straight from the Bay of Plenty in New Zealand.<br> It's super-soft with the silkiest mouth feel and drinking experience.</p>
+</div>
+
+
+<div role="main" class="container">
+
+  <img src="images/gallery.png" id="about" alt="instagram gallery">
+  <p class="hashtag">#MUVRA</p>
+
+
+  <h1>OUR WATER</h1>
+  <p> We offers one of the softest artesian waters in the world, rich in minerals like silica which are revitalising for the skin, a balanced alkalinity,
+    which provides a neutral or “sweet” taste and low levels of nitrates which make it one of the purest and cleanest waters in the world.
+  </p>
+
+
+  <img src="images/water.jpg" alt="certified quality" class="shadow">
+
+
+
+
+
+  <p id="sustain">&emsp;</p>
+  <hr>
+  <h1>SUSTAINABILITY</h1>
+
+  <div class="card-deck">
+    <div class="card shadow" style="width: 18rem;">
+      <img class="card-img-top" src="images/resource.jpg" alt="Card image cap">
+      <div class="card-body">
+        <p class="card-text">Since 2017, MUVRA's bottling site and all water sold in North America has been certified Carbon Neutral by "The Carbon Trust". Today, we’re proud to announce that the brand has achieved Carbon Neutral certification globally.</p>
+      </div>
+    </div>
+
+    <div class="card shadow" style="width: 18rem;">
+      <img class="card-img-top" src="images/returnbottle.jpg" alt="Card image cap">
+      <div class="card-body">
+        <p class="card-text">Using recycled PET results in 50% lower greenhouse gas emissions compared to using virgin PET for packaging production. We also partner up with “TerraCycle®” to provide recycle and return bottle stations across United States.</p>
+      </div>
+    </div>
+  </div>
+
+
+
+  <div class="starter-template">
+    <h1>&emsp;</h1>
+    <p class="lead">We will continue to optimize to maintain our carbon neutral status each year, while continue to innovate, preserve our water ecosystem and work with local communities.</p>
+  <a class="btn btn-lg btn-primary" data-toggle="modal" data-target="#exampleModalCenter">OUR CURRENT CAMPAIGN</a>
+</div>
+  <hr>
+
+</div>
+<img src="images/sparkling2.jpg" id="new" alt="instagram gallery">
+
+
+<footer class="footer font-small mdb-color pt-4">
+  <div class="container text-center text-md-left">
+    <div class="row text-center text-md-left mt-3 pb-3">
+
+      <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3">
+        <p class="text-uppercase mb-4 font-weight-bold">MUVRA</p>
+        <p>
+          <a href="#!">Our Company</a>
+        </p>
+        <p>
+          <a href="#!">Privacy Policy</a>
+        </p>
+        <p>
+          <a href="#!">Terms&Conditions</a>
+        </p>
+        <p>
+          <a href="#!">Water Quality Report</a>
+        </p>
+      </div>
+
+
+      <hr class="w-100 clearfix d-md-none">
+
+      <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mt-3">
+        <p class="text-uppercase mb-4 font-weight-bold">Products</p>
+        <p>
+          <a href="#!">Shipping</a>
+        </p>
+        <p>
+          <a href="#!">Order Status</a>
+        </p>
+        <p>
+          <a href="#!">Where To Buy</a>
+        </p>
+        <p>
+          <a href="#!">Recycle Stations</a>
+        </p>
+      </div>
+
+
+      <hr class="w-100 clearfix d-md-none">
+
+
+      <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mt-3">
+        <p class="text-uppercase mb-4 font-weight-bold">Support</p>
+        <p>
+          <a href="#!">FAQ</a>
+        </p>
+        <p>
+          <a href="#!">Become an Affiliate</a>
+        </p>
+        <p>
+          <a href="#!">Help</a>
+        </p>
+      </div>
+
+
+      <hr class="w-100 clearfix d-md-none">
+
+
+      <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mt-3">
+        <p class="text-uppercase mb-4 font-weight-bold">Contact</p>
+        <p class="fas fa-home mr-3">Los Angeles, CA, USA, 90027</p>
+
+      </div>
+    </div>
+
+    <hr>
+    <div class="row d-flex align-items-center">
+      <div class="col-md-7 col-lg-8">
+
+        <p class="text-center text-md-left">© 2020 MUVRA Company, all right reserved.</p>
+
+      </div>
+    </div>
+  </div>
+</footer>
+
+<div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered modal-xl" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalCenterTitle">Modal title</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <div id="slideshow">
+   <div>
+     <img src="images/resource.jpg">
+   </div>
+   <div>
+     <img src="images/water.jpg">
+   </div>
+   <div>
+        <div class="carousel-caption">
+          hello world
         </div>
       </div>
 
-        <div class="starter-template">
-          <h1>MVURA</h1>
-          <p class="lead">Use this document as a way to quickly start any new project.<br> All you get is this text and a mostly barebones HTML document.</p>
-          <p>&emsp;<p/>
-          </div>
+      </div>
+    </div>
+  </div>
+</div>
 
-        </div>
-
+<script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="js/bootstrap.min.js"></script>
   <script src="js/scripts.js"></script>
 </body>
-
 </html>
