--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           <div class="dropdown-menu" aria-labelledby="dropdown01">
             <a class="dropdown-item" href="#sustain">Sustainability</a>
             <a class="dropdown-item" href="#new">What's New</a>
-            <a class="dropdown-item" href="#buy">Order Now</a>
+            <a class="dropdown-item" href="#buy" id="ordernow" data-toggle="modal" data-target="#exampleModal">Order Now</a>
           </div>
         </li>
       </ul>
@@ -48,7 +48,7 @@
 
 
   <div class="thumbnail">
-    <img src="images/bev_head.jpg" alt="instagram gallery">
+    <img src="images/bev_head.jpg" alt="MUVRA mineral water">
     <div class="caption">
       <h2 class="ml12">Hydration never tasted so good</h2>
       <h2 class="ml13">Stay refreshed & hydrated with MUVRA</h2>
@@ -56,172 +56,212 @@
   </div>
 
 
-<div class="starter-template">
-  <h1>MUVRA</h1>
-  <p class="lead">Straight from the Bay of Plenty in New Zealand.<br> It's super-soft with the silkiest mouth feel and drinking experience.</p>
-</div>
-
-
-<div role="main" class="container">
-
-  <img src="images/gallery.png" id="about" alt="instagram gallery">
-  <p class="hashtag">#MUVRA</p>
-
-
-  <h1>OUR WATER</h1>
-  <p> We offers one of the softest artesian waters in the world, rich in minerals like silica which are revitalising for the skin, a balanced alkalinity,
-    which provides a neutral or “sweet” taste and low levels of nitrates which make it one of the purest and cleanest waters in the world.
-  </p>
-
-
-  <img src="images/water.jpg" alt="certified quality" class="shadow">
-
-
-
-
-
-  <p id="sustain">&emsp;</p>
-  <hr>
-  <h1>SUSTAINABILITY</h1>
-
-  <div class="card-deck">
-    <div class="card shadow" style="width: 18rem;">
-      <img class="card-img-top" src="images/resource.jpg" alt="Card image cap">
-      <div class="card-body">
-        <p class="card-text">Since 2017, MUVRA's bottling site and all water sold in North America has been certified Carbon Neutral by "The Carbon Trust". Today, we’re proud to announce that the brand has achieved Carbon Neutral certification globally.</p>
-      </div>
-    </div>
-
-    <div class="card shadow" style="width: 18rem;">
-      <img class="card-img-top" src="images/returnbottle.jpg" alt="Card image cap">
-      <div class="card-body">
-        <p class="card-text">Using recycled PET results in 50% lower greenhouse gas emissions compared to using virgin PET for packaging production. We also partner up with “TerraCycle®” to provide recycle and return bottle stations across United States.</p>
-      </div>
-    </div>
-  </div>
-
-
-
   <div class="starter-template">
-    <h1>&emsp;</h1>
-    <p class="lead">We will continue to optimize to maintain our carbon neutral status each year, while continue to innovate, preserve our water ecosystem and work with local communities.</p>
-  <a class="btn btn-lg btn-primary" data-toggle="modal" data-target="#exampleModalCenter">OUR CURRENT CAMPAIGN</a>
-</div>
-  <hr>
-
-</div>
-<img src="images/sparkling2.jpg" id="new" alt="instagram gallery">
-
-
-<footer class="footer font-small mdb-color pt-4">
-  <div class="container text-center text-md-left">
-    <div class="row text-center text-md-left mt-3 pb-3">
-
-      <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3">
-        <p class="text-uppercase mb-4 font-weight-bold">MUVRA</p>
-        <p>
-          <a href="#!">Our Company</a>
-        </p>
-        <p>
-          <a href="#!">Privacy Policy</a>
-        </p>
-        <p>
-          <a href="#!">Terms&Conditions</a>
-        </p>
-        <p>
-          <a href="#!">Water Quality Report</a>
-        </p>
-      </div>
-
-
-      <hr class="w-100 clearfix d-md-none">
-
-      <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mt-3">
-        <p class="text-uppercase mb-4 font-weight-bold">Products</p>
-        <p>
-          <a href="#!">Shipping</a>
-        </p>
-        <p>
-          <a href="#!">Order Status</a>
-        </p>
-        <p>
-          <a href="#!">Where To Buy</a>
-        </p>
-        <p>
-          <a href="#!">Recycle Stations</a>
-        </p>
-      </div>
-
-
-      <hr class="w-100 clearfix d-md-none">
-
-
-      <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mt-3">
-        <p class="text-uppercase mb-4 font-weight-bold">Support</p>
-        <p>
-          <a href="#!">FAQ</a>
-        </p>
-        <p>
-          <a href="#!">Become an Affiliate</a>
-        </p>
-        <p>
-          <a href="#!">Help</a>
-        </p>
-      </div>
-
-
-      <hr class="w-100 clearfix d-md-none">
-
-
-      <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mt-3">
-        <p class="text-uppercase mb-4 font-weight-bold">Contact</p>
-        <p class="fas fa-home mr-3">Los Angeles, CA, USA, 90027</p>
-
-      </div>
-    </div>
-
-    <hr>
-    <div class="row d-flex align-items-center">
-      <div class="col-md-7 col-lg-8">
-
-        <p class="text-center text-md-left">© 2020 MUVRA Company, all right reserved.</p>
-
-      </div>
-    </div>
+    <h1>MUVRA</h1>
+    <p class="lead">Straight from the Bay of Plenty in New Zealand.<br> It's super-soft with the silkiest mouth feel and drinking experience.</p>
   </div>
-</footer>
 
-<div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
-  <div class="modal-dialog modal-dialog-centered modal-xl" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalCenterTitle">Modal title</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      <div class="modal-body">
-        <div id="slideshow">
-   <div>
-     <img src="images/resource.jpg">
-   </div>
-   <div>
-     <img src="images/water.jpg">
-   </div>
-   <div>
-        <div class="carousel-caption">
-          hello world
+
+  <div role="main" class="container">
+
+    <img src="images/gallery.png" id="about" alt="instagram gallery">
+    <p class="hashtag">#MUVRA</p>
+
+
+    <h1>OUR WATER</h1>
+    <p> We offers one of the softest artesian waters in the world, rich in minerals like silica which are revitalising for the skin, a balanced alkalinity,
+      which provides a neutral or “sweet” taste and low levels of nitrates which make it one of the purest and cleanest waters in the world.
+    </p>
+    <img src="images/water.jpg" alt="certified quality" class="shadow">
+
+
+    <p id="sustain">&emsp;</p>
+    <hr>
+    <h1>SUSTAINABILITY</h1>
+
+    <div class="card-deck">
+      <div class="card shadow" style="width: 18rem;">
+        <img class="card-img-top" src="images/resource.jpg" alt="water resource">
+        <div class="card-body">
+          <p class="card-text">Since 2017, MUVRA's bottling site and all water sold in North America has been certified Carbon Neutral by "The Carbon Trust". Today, we’re proud to announce that the brand has achieved Carbon Neutral certification globally.</p>
         </div>
       </div>
 
+      <div class="card shadow" style="width: 18rem;">
+        <img class="card-img-top" src="images/returnbottle.jpg" alt="return bottle station">
+        <div class="card-body">
+          <p class="card-text">Using recycled PET results in 50% lower greenhouse gas emissions compared to using virgin PET for packaging production. We also partner up with “TerraCycle®” to provide recycle and return bottle stations across United States.</p>
+        </div>
+      </div>
+    </div>
+
+
+    <div class="starter-template">
+      <h1>&emsp;</h1>
+      <p class="lead">We will continue to optimize to maintain our carbon neutral status each year, while continue to innovate, preserve our water ecosystem and work with local communities.</p>
+      <a class="btn btn-lg btn-primary" data-toggle="modal" data-target="#exampleModalCenter">OUR MOVEMENT</a>
+    </div>
+    <hr>
+
+  </div>
+
+
+  <div class="thumbnail">
+    <img src="images/sparkling2.jpg" id="new" alt="MUVRA sparkling water">
+    <div class="cap">
+      <h1>Introducing&emsp;Sparkling Series</h1>
+      <hr>
+      <p>We’re exploring the intersection of culture and cocktails with some of the country’s most creative mixologists and artists. Now available for online orders.</p>
+      <p>**Select our dropdown menu on the top left to make a purchase.</p>
+    </div>
+  </div>
+
+
+  <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLabel">Select Your Options</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          <select>
+            <option>MUVRA Mineral Water: 6-pack</option>
+            <option>MUVRA Mineral Water: 12-pack</option>
+            <option>MUVRA Sparkling Water: 4-pack</option>
+            <option>MUVRA Sparkling Water: 6-pack</option>
+            <option>MUVRA Sparkling Water: 12-pack</option>
+          </select>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-primary">Order Now</button>
+        </div>
       </div>
     </div>
   </div>
-</div>
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-  <script src="js/bootstrap.min.js"></script>
-  <script src="js/scripts.js"></script>
-</body>
-</html>
+
+  <!-- footer -->
+  <footer class="footer font-small mdb-color pt-4">
+    <div class="container text-center text-md-left">
+      <div class="row text-center text-md-left mt-3 pb-3">
+
+        <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3">
+          <p class="text-uppercase mb-4 font-weight-bold">MUVRA</p>
+          <p>
+            <a href="#!">Our Company</a>
+          </p>
+          <p>
+            <a href="#!">Privacy Policy</a>
+          </p>
+          <p>
+            <a href="#!">Terms&Conditions</a>
+          </p>
+          <p>
+            <a href="#!">Water Quality Report</a>
+          </p>
+        </div>
+
+
+        <hr class="w-100 clearfix d-md-none">
+
+        <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mt-3">
+          <p class="text-uppercase mb-4 font-weight-bold">Products</p>
+          <p>
+            <a href="#!">Shipping</a>
+          </p>
+          <p>
+            <a href="#!">Order Status</a>
+          </p>
+          <p>
+            <a href="#!">Where To Buy</a>
+          </p>
+          <p>
+            <a href="#!">Recycle Stations</a>
+          </p>
+        </div>
+
+
+        <hr class="w-100 clearfix d-md-none">
+
+
+        <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mt-3">
+          <p class="text-uppercase mb-4 font-weight-bold">Support</p>
+          <p>
+            <a href="#!">FAQ</a>
+          </p>
+          <p>
+            <a href="#!">Become an Affiliate</a>
+          </p>
+          <p>
+            <a href="#!">Help</a>
+          </p>
+        </div>
+
+
+        <hr class="w-100 clearfix d-md-none">
+
+
+        <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mt-3">
+          <p class="text-uppercase mb-4 font-weight-bold">Contact</p>
+          <p class="fas fa-home mr-3">Los Angeles, CA, USA, 90027</p>
+
+        </div>
+      </div>
+
+      <hr>
+      <div class="row d-flex align-items-center">
+        <div class="col-md-7 col-lg-8">
+
+          <p class="text-center text-md-left">© 2020 MUVRA Company, all right reserved.</p>
+
+        </div>
+      </div>
+    </div>
+  </footer>
+  <!-- footer ends -->
+
+
+  <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalCenterTitle">MUVRA ENVIRONMENTAL PROJECTS</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          <div id="slideshow">
+            <div>
+              <img src="images/1.jpg">
+            </div>
+            <div>
+              <img src="images/2.jpg">
+            </div>
+            <div>
+              <img src="images/3.jpg">
+            </div>
+            <div>
+              <img src="images/4.jpg">
+            </div>
+            <div>
+              <img src="images/5.jpg">
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+
+
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <script src="js/scripts.js"></script>
+  </body>
+  </html>
