--- a/index.html
+++ b/index.html
@@ -237,25 +237,25 @@
         <div class="modal-body">
           <div id="slideshow">
             <div>
-              <img src="images/1.jpg">
+              <img src="images/1.jpg" alt="water provide">
             </div>
             <div>
-              <img src="images/2.jpg">
+              <img src="images/2.jpg" alt="fresh water">
             </div>
             <div>
-              <img src="images/3.jpg">
+              <img src="images/3.jpg" alt="save forest">
             </div>
             <div>
-              <img src="images/4.jpg">
+              <img src="images/4.jpg" alt="save water">
             </div>
             <div>
-              <img src="images/5.jpg">
+              <img src="images/5.jpg" alt="water provide urban">
             </div>
           </div>
         </div>
       </div>
     </div>
-
+</div>
 
 
 
